fix: footer about us link, notice in home page unblurred slightly, prof bharat kumar photo change

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -101,7 +101,7 @@ section {
     /* animation-delay: 4s ; */
     font-size: 10px;
     /* animation: bringImage 2s ease-in-out 1 ; */
-    backdrop-filter:blur(13px);
+    backdrop-filter:blur(1px);
     color:white;
   }
 
